--- a/index.html
+++ b/index.html
@@ -14,23 +14,19 @@
 <body>
   <nav class="navbar">
     <!-- LOGO -->
-    <a href="/index.html"><img src="/imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
+    <a href="index.html"><img src="/imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
     <div class="logo">Sjoa Escape</div>
     <!-- NAVIGATION MENU -->
-    <ul class="nav-links">
-      <!-- USING CHECKBOX HACK -->
-      <input type="checkbox" id="checkbox_toggle" />
-      <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+    <ul class="nav-links menu">
       <!-- NAVIGATION MENUS -->
-      <div class="menu">
         <li><a href="/index.html" class="active">Home</a></li>
-        <li>
-          <a href="/rafting-sjoa.html">Rafting Sjoa</a>
-        </li>
+        <li><a href="/rafting-sjoa.html">Rafting Sjoa</a></li>
         <li><a href="/activities.html">Activities</a></li>
         <li><a href="/contact.html">Contact</a></li>
-      </div>
     </ul>
+    <!-- USING CHECKBOX HACK -->
+    <input type="checkbox" id="checkbox_toggle" />
+    <label for="checkbox_toggle" class="hamburger">&#9776;</label>
     <div class="accebility">
       <a href="#" class="language"><i class="fa fa-language"></i></a>
     </div>
