fixing navs links

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <!-- NAVIGATION MENU -->
     <ul class="nav-links menu">
       <!-- NAVIGATION MENUS -->
-        <li><a href="/index.html" class="active">Home</a></li>
-        <li><a href="/rafting-sjoa.html">Rafting Sjoa</a></li>
-        <li><a href="/activities.html">Activities</a></li>
-        <li><a href="/contact.html">Contact</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="rafting-sjoa.html">Rafting Sjoa</a></li>
+        <li><a href="activities.html">Activities</a></li>
+        <li><a href="contact.html">Contact</a></li>
     </ul>
     <!-- USING CHECKBOX HACK -->
     <input type="checkbox" id="checkbox_toggle" />
