fixing img and links in index page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sjoa Escape | Hem</title>
-    <link rel="icon" href="/imagenes/logo-blue.png" type="image/gif">
+    <link rel="icon" href="imagenes/logo-blue.png" type="image/gif">
     <link href="CSS/style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Medula+One&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2ef942ef12.js" crossorigin="anonymous"></script>
@@ -14,7 +14,7 @@
 <body>
   <nav class="navbar">
     <!-- LOGO -->
-    <a href="index.html"><img src="/imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
+    <a href="index.html"><img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
     <div class="logo">Sjoa Escape</div>
     <!-- NAVIGATION MENU -->
     <ul class="nav-links menu">
@@ -37,27 +37,27 @@
   <div class="slideshow-container">
     <div class="mySlides fade">
       <div class="numbertext">1 / 5</div>
-        <img src="/imagenes/slide-washingmachine.jpg" alt="Rafting Sjoa Washing Machine" style="width:100%">
+        <img src="imagenes/slide-washingmachine.jpg" alt="Rafting Sjoa Washing Machine" style="width:100%">
       <div class="text">Rafting Sjoa</div>
     </div>
     <div class="mySlides fade">
       <div class="numbertext">2 / 5</div>
-        <img src="/imagenes/slide-familyrafting.jpg" alt="Family Rafting Sjoa" style="width:100%">
+        <img src="imagenes/slide-familyrafting.jpg" alt="Family Rafting Sjoa" style="width:100%">
       <div class="text">Family Rafting</div>
     </div>
     <div class="mySlides fade">
       <div class="numbertext">3 / 5</div>
-        <img src="/imagenes/slide-flipinsjoa.jpg" alt="Ultimate Rafting in Sjoa" style="width:100%">
+        <img src="imagenes/slide-flipinsjoa.jpg" alt="Ultimate Rafting in Sjoa" style="width:100%">
       <div class="text">Ultimate Rafting</div>
     </div>
     <div class="mySlides fade">
       <div class="numbertext">4 / 5</div>
-      <img src="/imagenes/slide-raftingaseng.jpg" alt="Rafting Åseng" style="width: 100%">
+      <img src="imagenes/slide-raftingaseng.jpg" alt="Rafting Åseng" style="width: 100%">
       <div class="text">Rafting Åseng</div>
     </div>
     <div class="mySlides fade">
       <div class="numbertext">5 / 5</div>
-        <img src="/imagenes/slide-happyfaces.jpg" alt="Happy Rafting" style="width:100%">
+        <img src="imagenes/slide-happyfaces.jpg" alt="Happy Rafting" style="width:100%">
       <div class="text">Rafting in Sjoa</div>
     </div>
     <!-- prev-next -->
@@ -81,10 +81,10 @@
   </div>
   <div class="container-box">
     <div class="ban-img">
-      <img src="/imagenes/banner-sjoarafting.jpg" alt="Rafting in Sjoa" width="100%">
+      <img src="imagenes/banner-sjoarafting.jpg" alt="Rafting in Sjoa" width="100%">
     </div>
     <div class="ban-activity">
-      <h3><a href="/activities/sjoa-classic.html">Rating in Sjoa</a></h3>
+      <h3><a href="activities/sjoa-classic.html">Rating in Sjoa</a></h3>
     </div><hr class="hr-index">
     <div class="ban-description">
       <p>This is the classic tour on Sjoa river.<br>
@@ -94,7 +94,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="/activities/sjoa-classic.html">Read more</a></li>
+        <li><a href="activities/sjoa-classic.html">Read more</a></li>
         <li>Half day</li>
         <li><b>950 NOK</b></li>
       </ul>
@@ -103,10 +103,10 @@
   <br class="br-activity">
   <div class="container-box">
     <div class="ban-img">
-      <img src="/imagenes/banner-familyrafting.jpg" alt="Family Rafting in Sjoa" width="100%">
+      <img src="imagenes/banner-familyrafting.jpg" alt="Family Rafting in Sjoa" width="100%">
     </div>
     <div class="ban-activity">
-      <h3><a href="/activities/family-rafting.html">Family Rafting</a></h3>
+      <h3><a href="activities/family-rafting.html">Family Rafting</a></h3>
     </div>
     <hr class="hr-index">
     <div class="ban-description">
@@ -116,7 +116,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="/activities/family-rafting.html">Read more</a></li>
+        <li><a href="activities/family-rafting.html">Read more</a></li>
         <li>Half day</li>
         <li><b>750 NOK</b></li>
       </ul>
@@ -125,10 +125,10 @@
   <br class="br-activity">
   <div class="container-box">
     <div class="ban-img">
-      <img src="/imagenes/banner-asengrafting.jpg" alt="Rafting Åseng" width="100%">
+      <img src="imagenes/banner-asengrafting.jpg" alt="Rafting Åseng" width="100%">
     </div>
     <div class="ban-activity">
-      <h3><a href="/activities/rafting-aseng.html">Rafting Åseng</a></h3>
+      <h3><a href="activities/rafting-aseng.html">Rafting Åseng</a></h3>
     </div>
     <hr class="hr-index">
     <div class="ban-description">
@@ -139,7 +139,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="/activities/rafting-aseng.html">Read more</a></li>
+        <li><a href="activities/rafting-aseng.html">Read more</a></li>
         <li>Full day</li>
         <li><b>1250 NOK</b></li>
       </ul>
@@ -148,10 +148,10 @@
   <br class="br-activity">
   <div class="container-box">
     <div class="ban-img">
-      <img src="/imagenes/banner-ultimaterafting.jpg" alt="Ultimate Rafting Sjoa" width="100%">
+      <img src="imagenes/banner-ultimaterafting.jpg" alt="Ultimate Rafting Sjoa" width="100%">
     </div>
     <div class="ban-activity">
-      <h3><a href="/activities/ultimate-rafting.html">Ultimate Rafting</a></h3>
+      <h3><a href="activities/ultimate-rafting.html">Ultimate Rafting</a></h3>
     </div>
     <hr class="hr-index">
     <div class="ban-description">
@@ -161,7 +161,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="/activities/ultimate-rafting.html">Read more</a></li>
+        <li><a href="activities/ultimate-rafting.html">Read more</a></li>
         <li>Full day</li>
         <li><b>1450 NOK</b></li>
       </ul>
@@ -190,7 +190,7 @@
   <div class="container-fluid">
     <!-- LOGO & INFO -->
     <div class="footer-logo">
-      <a href="/index.html"><img src="/imagenes/logo-blue.png" alt="Logo Sjoa Escape" width="58"></a> 
+      <a href="index.html"><img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape" width="58"></a> 
       <h5>Sjoa Escape</h5>
     </div>
     <address class="footer-contact">
