fix nav & links in rafting-sjoa page

--- a/rafting-sjoa.html
+++ b/rafting-sjoa.html
@@ -14,22 +14,18 @@
 <body>
   <nav class="navbar">
     <!-- LOGO -->
-    <a href="/index.html"><img src="/imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
+    <a href="index.html"><img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
     <div class="logo">Sjoa Escape</div>
+     <!-- USING CHECKBOX HACK -->
+     <input type="checkbox" id="checkbox_toggle" />
+     <label for="checkbox_toggle" class="hamburger">&#9776;</label>
     <!-- NAVIGATION MENU -->
-    <ul class="nav-links">
-      <!-- USING CHECKBOX HACK -->
-      <input type="checkbox" id="checkbox_toggle" />
-      <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+    <ul class="nav-links menu">
       <!-- NAVIGATION MENUS -->
-      <div class="menu">
-        <li><a href="/index.html">Home</a></li>
-        <li>
-          <a href="/rafting-sjoa.html"  class="active">Rafting Sjoa</a>
-        </li>
-        <li><a href="/activities.html">Activities</a></li>
-        <li><a href="/contact.html">Contact</a></li>
-      </div>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="rafting-sjoa.html"  class="active">Rafting Sjoa</a></li>
+        <li><a href="activities.html">Activities</a></li>
+        <li><a href="contact.html">Contact</a></li>
     </ul>
     <div class="accebility">
       <a href="#" class="language"><i class="fa fa-language"></i></a>
@@ -42,7 +38,7 @@
     <h1>Rafting in Sjoa</h1>
   </div>
   <articule class="raft-intro">
-    <img src="/imagenes/Sjoa-WashingMachine.jpg" alt="Rafting Sjoa Washing Machine rapid">
+    <img src="imagenes/Sjoa-WashingMachine.jpg" alt="Rafting Sjoa Washing Machine rapid">
     <p>On this webpage you can find the different options for rafting in Sjoa.<br>
     Here we will describe each of the options, so you can choose the one that best suits your needs.<br>
     They are tours to enjoy with friends, family or as a couple. Of course you can customize your trip, depending on the number of participants.<br>
@@ -56,7 +52,6 @@
     <p>Find the rafting tour that best suits what you are looking for. <i>Click</i> on the tour that you like, there you can find more information about the tour, what it includes and what we recommend you bring.<br>
       Below you can find other activities that you can combine with rafting, as well as lodging options.
     </p>
-   
   </articule>
 </section>
 
@@ -67,10 +62,10 @@
   </div>
   <div class="container-box">
     <div class="ban-img">
-      <img src="/imagenes/banner-sjoarafting.jpg" alt="Rafting in Sjoa" width="100%">
+      <img src="imagenes/banner-sjoarafting.jpg" alt="Rafting in Sjoa" width="100%">
     </div>
     <div class="ban-activity">
-      <h3><a href="/activities/sjoa-classic.html">Sjoa Classic</a></h3>
+      <h3><a href="activities/sjoa-classic.html">Sjoa Classic</a></h3>
     </div>
     <hr class="hr-index">
     <div class="ban-description">
@@ -81,7 +76,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="/activities/sjoa-classic.html">Book Now!</a></li>
+        <li><a href="activities/sjoa-classic.html">Book Now!</a></li>
         <li>Half day</li>
         <li><b>950 NOK</b></li>
       </ul>
@@ -90,10 +85,10 @@
   <br class="br-activity">
   <div class="container-box">
     <div class="ban-img">
-      <img src="/imagenes/banner-familyrafting.jpg" alt="Rafting in Sjoa" width="100%">
+      <img src="imagenes/banner-familyrafting.jpg" alt="Rafting in Sjoa" width="100%">
     </div>
     <div class="ban-activity">
-      <h3><a href="/activities/family-rafting.html">Family Rafting</a></h3>
+      <h3><a href="activities/family-rafting.html">Family Rafting</a></h3>
     </div>
     <hr class="hr-index">
     <div class="ban-description">
@@ -103,7 +98,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="/activities/family-rafting.html">Book Now!</a></li>
+        <li><a href="activities/family-rafting.html">Book Now!</a></li>
         <li>Half day</li>
         <li><b>750 NOK</b></li>
       </ul>
@@ -112,10 +107,10 @@
   <br class="br-activity">
   <div class="container-box">
     <div class="ban-img">
-      <img src="/imagenes/banner-asengrafting.jpg" alt="Rafting in Sjoa" width="100%">
+      <img src="imagenes/banner-asengrafting.jpg" alt="Rafting in Sjoa" width="100%">
     </div>
     <div class="ban-activity">
-      <h3><a href="/activities/rafting-aseng.html">Rafting Åseng</a></h3>
+      <h3><a href="activities/rafting-aseng.html">Rafting Åseng</a></h3>
     </div>
     <hr class="hr-index">
     <div class="ban-description">
@@ -126,7 +121,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="/activities/rafting-aseng.html">Book Now!</a></li>
+        <li><a href="activities/rafting-aseng.html">Book Now!</a></li>
         <li>Full day</li>
         <li><b>1250 NOK</b></li>
       </ul>
@@ -135,10 +130,10 @@
   <br class="br-activity">
   <div class="container-box">
     <div class="ban-img">
-      <img src="/imagenes/banner-ultimaterafting.jpg" alt="Rafting in Sjoa" width="100%">
+      <img src="imagenes/banner-ultimaterafting.jpg" alt="Rafting in Sjoa" width="100%">
     </div>
     <div class="ban-activity">
-      <h3><a href="/activities/ultimate-rafting.html">Ultimate Rafting</a></h3>
+      <h3><a href="activities/ultimate-rafting.html">Ultimate Rafting</a></h3>
     </div>
     <hr class="hr-index">
     <div class="ban-description">
@@ -148,7 +143,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="/activities/ultimate-rafting.html">Book Now!</a></li>
+        <li><a href="activities/ultimate-rafting.html">Book Now!</a></li>
         <li>Full day</li>
         <li><b>1450 NOK</b></li>
       </ul>
@@ -177,7 +172,7 @@
   <div class="container-fluid">
     <!-- LOGO & INFO -->
     <div class="footer-logo">
-      <img src="/imagenes/logo-blue.png" alt="Logo Sjoa Escape" width="58">
+      <img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape" width="58">
       <h5>Sjoa Escape</h5>
     </div>
     <address class="footer-contact">
