fixing nav & links in activities page

--- a/activities.html
+++ b/activities.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sjoa Escape | Activities</title>
-    <link rel="icon" href="/imagenes/logo-blue.png" type="image/gif">
+    <link rel="icon" href="imagenes/logo-blue.png" type="image/gif">
     <link href="CSS/style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Medula+One&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2ef942ef12.js" crossorigin="anonymous"></script>
@@ -14,20 +14,18 @@
 <body>
   <nav class="navbar">
     <!-- LOGO -->
-    <a href="/index.html"><img src="/imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
+    <a href="index.html"><img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
     <div class="logo">Sjoa Escape</div>
+    <!-- USING CHECKBOX HACK -->
+    <input type="checkbox" id="checkbox_toggle" />
+    <label for="checkbox_toggle" class="hamburger">&#9776;</label>
     <!-- NAVIGATION MENU -->
-    <ul class="nav-links">
-      <!-- USING CHECKBOX HACK -->
-      <input type="checkbox" id="checkbox_toggle" />
-      <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+    <ul class="nav-links menu">
       <!-- NAVIGATION MENUS -->
-      <div class="menu">
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/rafting-sjoa.html">Rafting Sjoa</a></li>
-        <li><a href="/activities.html" class="active">Activities</a></li>
-        <li><a href="/contact.html">Contact</a></li>
-      </div>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="rafting-sjoa.html">Rafting Sjoa</a></li>
+        <li><a href="activities.html" class="active">Activities</a></li>
+        <li><a href="contact.html">Contact</a></li>
     </ul>
     <div class="accebility">
       <a href="#" class="language"><i class="fa fa-language"></i></a>
@@ -40,7 +38,7 @@
     <h1>Activities in Sjoa</h1>
   </div>
   <articule class="raft-intro">
-    <img src="/imagenes/top-actividades.jpg" alt="Rafting Sjoa Gulfstream rapid" width="150px">
+    <img src="imagenes/top-actividades.jpg" alt="Rafting Sjoa Gulfstream rapid" width="150px">
     <p>No solo hay Rafting en Sjoa!<br>
     Hay otras actividades, tanto en el río como en la montaña y el entre arboles. Entre estas actividades esta Riverboard en el río Sjoa, dookie o kayak inflable para desncenso de río, ya se en individual o en pareja. pero tambien hay cursos de kayak de río, desde nivel principiantes hasta, intermedios y avanzados, asi como de kayak de seguridad.<br>
     Estas actividades pueden complementar tu visita al valle de Sjoa, además de un recorrido de Rafting, ya sea rafting en Sjoa o rafting familiar.<br>
@@ -56,10 +54,10 @@
   </div>
   <div class="container-box">
     <div class="ban-img">
-      <img src="/imagenes/banner-riverboard.jpg" alt="Riverboard in Sjoa" width="100%">
+      <img src="imagenes/banner-riverboard.jpg" alt="Riverboard in Sjoa" width="100%">
     </div>
     <div class="ban-activity">
-      <h3><a href="/activities/riverboard-sjoa.html">Riverboard Sjoa</a></h3>
+      <h3><a href="activities/riverboard-sjoa.html">Riverboard Sjoa</a></h3>
     </div>
     <div class="ban-description">
       <p>Total adventure!<br>
@@ -68,7 +66,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="/activities/riverboard-sjoa.html">Book Now!</a></li>
+        <li><a href="activities/riverboard-sjoa.html">Book Now!</a></li>
         <li>Half day</li>
         <li><b>750 NOK</b></li>
       </ul>
@@ -77,10 +75,10 @@
   <br class="br-activity">
   <div class="container-box">
     <div class="ban-img">
-      <img src="/imagenes/banner-dookies.jpg" alt="Inflatable kayak in Sjoa" width="100%">
+      <img src="imagenes/banner-dookies.jpg" alt="Inflatable kayak in Sjoa" width="100%">
     </div>
     <div class="ban-activity">
-      <h3><a href="/activities/dookies-sjoa.html">Dookie Sjoa</a></h3>
+      <h3><a href="activities/dookies-sjoa.html">Dookie Sjoa</a></h3>
     </div>
     <div class="ban-description">
       <p>A unique adventure in Sjoa!<br>
@@ -90,7 +88,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="/activities/dookies-sjoa.html">Book Now!</a></li>
+        <li><a href="activities/dookies-sjoa.html">Book Now!</a></li>
         <li>Half day</li>
         <li><b>750 NOK</b></li>
       </ul>
@@ -99,10 +97,10 @@
   <br class="br-activity">
   <div class="container-box">
     <div class="ban-img">
-      <img src="/imagenes/banner-kl{ttrapark.jpg" alt="Klättrapark in Sjoa" width="100%">
+      <img src="imagenes/banner-kl{ttrapark.jpg" alt="Klättrapark in Sjoa" width="100%">
     </div>
     <div class="ban-activity">
-      <h3><a href="/activities/klattrapark.html">Klättrapark</a></h3>
+      <h3><a href="activities/klattrapark.html">Klättrapark</a></h3>
     </div>
     <div class="ban-description">
       <p>Ideal for the whole family!<br>
@@ -112,7 +110,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="/activities/klattrapark.html">Book Now!</a></li>
+        <li><a href="activities/klattrapark.html">Book Now!</a></li>
         <li>Full day</li>
         <li><b>250 NOK</b></li>
       </ul>
@@ -121,10 +119,10 @@
   <br class="br-activity">
   <div class="container-box">
     <div class="ban-img">
-      <img src="/imagenes/banner-viaferrata.jpg" alt="Rafting in Sjoa" width="100%">
+      <img src="imagenes/banner-viaferrata.jpg" alt="Rafting in Sjoa" width="100%">
     </div>
     <div class="ban-activity">
-      <h3><a href="/activities/via-ferrata.html">Via Ferrata Sjoa</a></h3>
+      <h3><a href="activities/via-ferrata.html">Via Ferrata Sjoa</a></h3>
     </div>
     <div class="ban-description">
       <p>Do you want to try something new in Sjoa?<br>
@@ -133,7 +131,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="/activities/via-ferrata.html">Book Now!</a></li>
+        <li><a href="activities/via-ferrata.html">Book Now!</a></li>
         <li>Full day</li>
         <li><b>650 NOK</b></li>
       </ul>
@@ -162,7 +160,7 @@
   <div class="container-fluid">
     <!-- LOGO & INFO -->
     <div class="footer-logo">
-      <img src="/imagenes/logo-blue.png" alt="Logo Sjoa Escape" width="58">
+      <img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape" width="58">
       <h5>Sjoa Escape</h5>
     </div>
     <address class="footer-contact">
