ficing links & nav in contact page

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sjoa Escape | Activities</title>
-    <link rel="icon" href="imagenes/logo1-guld.png" type="image/gif">
+    <link rel="icon" href="imagenes/logo-blue.png" type="image/gif">
     <link href="CSS/style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Medula+One&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2ef942ef12.js" crossorigin="anonymous"></script>
@@ -14,22 +14,18 @@
 <body>
 <nav class="navbar">
     <!-- LOGO -->
-    <a href="/index.html"><img src="/imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
+    <a href="index.html"><img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
     <div class="logo">Sjoa Escape</div>
-    <!-- NAVIGATION MENU -->
-    <ul class="nav-links">
-      <!-- USING CHECKBOX HACK -->
-      <input type="checkbox" id="checkbox_toggle" />
-      <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+    <!-- USING CHECKBOX HACK -->
+    <input type="checkbox" id="checkbox_toggle" />
+    <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+    <!-- NAVIGATION MENU -->    
+    <ul class="nav-links menu">
       <!-- NAVIGATION MENUS -->
-      <div class="menu">
-        <li><a href="/index.html">Home</a></li>
-        <li>
-          <a href="/rafting-sjoa.html">Rafting Sjoa</a>
-        </li>
-        <li><a href="/activities.html">Activities</a></li>
-        <li><a href="/contact.html" class="active">Contact</a></li>
-      </div>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="rafting-sjoa.html">Rafting Sjoa</a></li>
+        <li><a href="activities.html">Activities</a></li>
+        <li><a href="contact.html" class="active">Contact</a></li>
     </ul>
     <div class="accebility">
       <a href="#" class="language"><i class="fa fa-language"></i></a>
@@ -93,7 +89,7 @@
     <div class="container-fluid">
     <!-- LOGO & INFO -->
         <div class="footer-logo">
-            <img src="/imagenes/logo-blue.png" alt="Logo Sjoa Escape" width="58">
+            <a href="index.html"><img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape" width="58"></a>
             <h5>Sjoa Escape</h5>
         </div>
         <address class="footer-contact">
