--- a/rafting-sjoa.html
+++ b/rafting-sjoa.html
@@ -172,7 +172,7 @@
   <div class="container-fluid">
     <!-- LOGO & INFO -->
     <div class="footer-logo">
-      <img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape" width="58">
+      <a href="index.html"><img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape" width="58"></a>
       <h5>Sjoa Escape</h5>
     </div>
     <address class="footer-contact">
