fixing links & nav via-ferrata page

--- a/activities/via-ferrata.html
+++ b/activities/via-ferrata.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sjoa Escape | Via Ferrata Sjoa</title>
-    <link rel="icon" href="/imagenes/logo-blue.png" type="image/gif">
-    <link href="/CSS/style.css" type="text/css" rel="stylesheet">
+    <link rel="icon" href="imagenes/logo-blue.png" type="image/gif">
+    <link href="CSS/style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Medula+One&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2ef942ef12.js" crossorigin="anonymous"></script>
 </head>
@@ -14,22 +14,18 @@
 <body>
     <nav class="navbar">
       <!-- LOGO -->
-      <a href="/index.html"><img src="/imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
+      <a href="index.html"><img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
       <div class="logo">Sjoa Escape</div>
+      <!-- USING CHECKBOX HACK -->
+      <input type="checkbox" id="checkbox_toggle" />
+      <label for="checkbox_toggle" class="hamburger">&#9776;</label>
       <!-- NAVIGATION MENU -->
-      <ul class="nav-links">
-        <!-- USING CHECKBOX HACK -->
-        <input type="checkbox" id="checkbox_toggle" />
-        <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+      <ul class="nav-links menu">
         <!-- NAVIGATION MENUS -->
-        <div class="menu">
-          <li><a href="/index.html" class="active">Home</a></li>
-          <li>
-            <a href="/rafting-sjoa.html">Rafting Sjoa</a>
-          </li>
-          <li><a href="/activities.html">Activities</a></li>
-          <li><a href="/contact.html">Contact</a></li>
-        </div>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="rafting-sjoa.html">Rafting Sjoa</a></li>
+          <li><a href="activities.html">Activities</a></li>
+          <li><a href="contact.html">Contact</a></li>
       </ul>
       <div class="accebility">
         <a href="#" class="language"><i class="fa fa-language"></i></a>
@@ -44,7 +40,7 @@
     </div>
     <br>
     <div class="container-detail">
-        <img src="/imagenes/Sjoa-WashingMachine.jpg" alt="Rafting in Sjoa" width="150px">
+        <img src="imagenes/Sjoa-WashingMachine.jpg" alt="Rafting in Sjoa" width="150px">
         <div class="ban-incluides">
             <h3>It incluides</h3>
             <ul>
@@ -134,7 +130,7 @@
     <div class="container-fluid">
       <!-- LOGO & INFO -->
       <div class="footer-logo">
-        <a href="/index.html"><img src="/imagenes/logo-blue.png" alt="Logo Sjoa Escape" width="58"></a>  
+        <a href="index.html"><img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape" width="58"></a>  
         <h5>Sjoa Escape</h5>
       </div>
       <address class="footer-contact">
