--- a/activities/sjoa-classic.html
+++ b/activities/sjoa-classic.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sjoa Escape | Sjoa Classic</title>
-    <link rel="icon" href="imagenes/logo-blue.png" type="image/gif">
-    <link href="CSS/style.css" type="text/css" rel="stylesheet">
+    <link rel="icon" href="/imagenes/logo-blue.png" type="image/gif">
+    <link href="/CSS/style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Medula+One&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2ef942ef12.js" crossorigin="anonymous"></script>
 </head>
