--- a/activities/sjoa-classic.html
+++ b/activities/sjoa-classic.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar">
       <!-- LOGO -->
-      <a href="index.html"><img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
+      <a href="/index.html"><img src="/imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
       <div class="logo">Sjoa Escape</div>
       <!-- USING CHECKBOX HACK -->
       <input type="checkbox" id="checkbox_toggle" />
@@ -22,10 +22,10 @@
       <!-- NAVIGATION MENU -->
       <ul class="nav-links menu">
         <!-- NAVIGATION MENUS -->
-          <li><a href="index.html">Home</a></li>
-          <li><a href="rafting-sjoa.html">Rafting Sjoa</a></li>
-          <li><a href="activities.html">Activities</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/rafting-sjoa.html">Rafting Sjoa</a></li>
+          <li><a href="/activities.html">Activities</a></li>
+          <li><a href="/contact.html">Contact</a></li>
       </ul>
       <div class="accebility">
         <a href="#" class="language"><i class="fa fa-language"></i></a>
@@ -46,7 +46,7 @@
     </div>
     <br>
     <div class="container-detail">
-        <img src="imagenes/Sjoa-WashingMachine.jpg" alt="Rafting in Sjoa" width="150px">
+        <img src="/imagenes/Sjoa-WashingMachine.jpg" alt="Rafting in Sjoa" width="150px">
         <div class="ban-incluides">
             <h3>It incluides</h3>
             <ul>
@@ -137,7 +137,7 @@
     <div class="container-fluid">
       <!-- LOGO & INFO -->
       <div class="footer-logo">
-        <a href="index.html"><img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape" width="58"></a>  
+        <a href="/index.html"><img src="/imagenes/logo-blue.png" alt="Logo Sjoa Escape" width="58"></a>  
         <h5>Sjoa Escape</h5>
       </div>
       <address class="footer-contact">
