--- a/activities/klattrapark.html
+++ b/activities/klattrapark.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sjoa Escape | Klättrapark</title>
     <link rel="icon" href="/imagenes/logo-blue.png" type="image/gif">
-    <link href="/activities.html" type="text/css" rel="stylesheet">
+    <link href="/CSS/style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Medula+One&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2ef942ef12.js" crossorigin="anonymous"></script>
 </head>
