--- a/activities/riverboard-sjoa.html
+++ b/activities/riverboard-sjoa.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sjoa Escape | Riverboard Sjoa</title>
-    <link rel="icon" href="imagenes/logo-blue.png" type="image/gif">
-    <link href="CSS/style.css" type="text/css" rel="stylesheet">
+    <link rel="icon" href="/imagenes/logo-blue.png" type="image/gif">
+    <link href="/CSS/style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Medula+One&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2ef942ef12.js" crossorigin="anonymous"></script>
 </head>
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar">
       <!-- LOGO -->
-      <a href="index.html"><img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
+      <a href="/index.html"><img src="/imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
       <div class="logo">Sjoa Escape</div>
       <!-- USING CHECKBOX HACK -->
       <input type="checkbox" id="checkbox_toggle" />
@@ -22,10 +22,10 @@
       <!-- NAVIGATION MENU -->
       <ul class="nav-links menu">
         <!-- NAVIGATION MENUS -->
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="rafting-sjoa.html">Rafting Sjoa</a></li>
-          <li><a href="activities.html">Activities</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/rafting-sjoa.html">Rafting Sjoa</a></li>
+          <li><a href="/activities.html">Activities</a></li>
+          <li><a href="/contact.html">Contact</a></li>
       </ul>
       <div class="accebility">
         <a href="#" class="language"><i class="fa fa-language"></i></a>
@@ -40,7 +40,7 @@
     </div>
     <br>
     <div class="container-detail">
-        <img src="imagenes/top-riverboard.jpg" alt="Riverboard Sjoa" width="150px">
+        <img src="/imagenes/top-riverboard.jpg" alt="Riverboard Sjoa" width="150px">
         <div class="ban-incluides">
             <h3>It incluides</h3>
             <ul>
@@ -130,7 +130,7 @@
     <div class="container-fluid">
       <!-- LOGO & INFO -->
       <div class="footer-logo">
-        <a href="index.html"><img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape" width="58"></a>  
+        <a href="/index.html"><img src="/imagenes/logo-blue.png" alt="Logo Sjoa Escape" width="58"></a>  
         <h5>Sjoa Escape</h5>
       </div>
       <address class="footer-contact">
