add via-ferrta page to main list

--- a/activities.html
+++ b/activities.html
@@ -122,7 +122,7 @@
       <img src="imagenes/banner-viaferrata.jpg" alt="Rafting in Sjoa" width="100%">
     </div>
     <div class="ban-activity">
-      <h3><a href="activities/via-ferrata.html">Via Ferrata Sjoa</a></h3>
+      <h3><a href="via-ferrata.html">Via Ferrata Sjoa</a></h3>
     </div>
     <div class="ban-description">
       <p>Do you want to try something new in Sjoa?<br>
@@ -131,7 +131,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="activities/via-ferrata.html">Book Now!</a></li>
+        <li><a href="via-ferrata.html">Book Now!</a></li>
         <li>Full day</li>
         <li><b>650 NOK</b></li>
       </ul>
