add activities options in index page

--- a/index.html
+++ b/index.html
@@ -168,7 +168,97 @@
     </div>  
   </div>
 </section>
-  
+<!-- ACTIVITIES -->
+<section class="container-banner">
+  <div class="title-ban">
+    <h2>More activities in Sjoa</h2>
+  </div>
+  <div class="container-box">
+    <div class="ban-img">
+      <img src="imagenes/banner-riverboard.jpg" alt="Riverboard in Sjoa" width="100%">
+    </div>
+    <div class="ban-activity">
+      <h3><a href="activities/riverboard-sjoa.html">Riverboard Sjoa</a></h3>
+    </div>
+    <div class="ban-description">
+      <p>Total adventure!<br>
+        An activity that demands mental and physical strength, a real challenge for those who seek to expand their limits enjoying the rapids of Sjoa.<br>
+        For people over 16 years old.</p>
+    </div>
+    <div class="list-option">
+      <ul class="links-activity">
+        <li><a href="activities/riverboard-sjoa.html">Book Now!</a></li>
+        <li>Half day</li>
+        <li><b>750 NOK</b></li>
+      </ul>
+    </div>  
+  </div>
+  <br class="br-activity">
+  <div class="container-box">
+    <div class="ban-img">
+      <img src="imagenes/banner-dookies.jpg" alt="Inflatable kayak in Sjoa" width="100%">
+    </div>
+    <div class="ban-activity">
+      <h3><a href="activities/dookies-sjoa.html">Dookie Sjoa</a></h3>
+    </div>
+    <div class="ban-description">
+      <p>A unique adventure in Sjoa!<br>
+        Maneuver your own kayak behind a guide who will show you the way through the rapids of the Sjoa River.<br>
+        Try it in couple!<br>
+        For people over 16 years old.</p>
+    </div>
+    <div class="list-option">
+      <ul class="links-activity">
+        <li><a href="activities/dookies-sjoa.html">Book Now!</a></li>
+        <li>Half day</li>
+        <li><b>750 NOK</b></li>
+      </ul>
+    </div>  
+  </div>
+  <br class="br-activity">
+  <div class="container-box">
+    <div class="ban-img">
+      <img src="imagenes/banner-kl{ttrapark.jpg" alt="Klättrapark in Sjoa" width="100%">
+    </div>
+    <div class="ban-activity">
+      <h3><a href="activities/klattrapark.html">Klättrapark</a></h3>
+    </div>
+    <div class="ban-description">
+      <p>Ideal for the whole family!<br>
+        With three different levels, it is a perfect activity to enjoy with the family.<br>
+        In a safe environment and with beautiful landscapes overlooking the river.<br>
+        Ideal for children over 7 years old.</p>
+    </div>
+    <div class="list-option">
+      <ul class="links-activity">
+        <li><a href="activities/klattrapark.html">Book Now!</a></li>
+        <li>Full day</li>
+        <li><b>250 NOK</b></li>
+      </ul>
+    </div>  
+  </div>
+  <br class="br-activity">
+  <div class="container-box">
+    <div class="ban-img">
+      <img src="imagenes/banner-viaferrata.jpg" alt="Rafting in Sjoa" width="100%">
+    </div>
+    <div class="ban-activity">
+      <h3><a href="via-ferrata.html">Via Ferrata Sjoa</a></h3>
+    </div>
+    <div class="ban-description">
+      <p>Do you want to try something new in Sjoa?<br>
+        This is a trip to the top of the Sjoa Valley, from where one can enjoy of a fantastic view.<br>
+        Ideal for people over 12 years old.</p>
+    </div>
+    <div class="list-option">
+      <ul class="links-activity">
+        <li><a href="via-ferrata.html">Book Now!</a></li>
+        <li>Full day</li>
+        <li><b>650 NOK</b></li>
+      </ul>
+    </div>  
+  </div>
+</section>
 <!-- SOCIAL MEDIA -->
 <div class="container-social">
   <div>
