fixing via-ferrata title

--- a/via-ferrata.html
+++ b/via-ferrata.html
@@ -34,7 +34,7 @@
 <!-- ACTIVITY DESCRIPTION -->
 <section>
     <div class="container-activity">
-        <h2>Sjoa Classic</h2>
+        <h2>Via Ferrata Sjoa</h2>
         <hr class="hr-index">
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi, facilis sunt dolorem debitis amet nisi omnis sint dicta voluptatem, cum ratione. Sunt, molestiae nihil at culpa deserunt aperiam nemo magnam?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi, facilis sunt dolorem debitis amet nisi omnis sint dicta voluptatem, cum ratione. Sunt, molestiae nihil at culpa deserunt aperiam nemo magnam?</p>
     </div>
