--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <input type="checkbox" id="checkbox_toggle" />
     <label for="checkbox_toggle" class="hamburger">&#9776;</label>
     <div class="accebility">
-      <a href="#" class="language"><i class="fa fa-language"></i></a>
+      <a href="#" class="language" aria-label="Activate the accessibility mode of the web page"><i class="fa fa-language"></i></a>
     </div>
   </nav>
 
@@ -37,27 +37,27 @@
   <div class="slideshow-container">
     <div class="mySlides fade">
       <div class="numbertext">1 / 5</div>
-        <img src="imagenes/slide-washingmachine.jpg" alt="Rafting Sjoa Washing Machine" style="width:100%">
+        <img src="imagenes/slide-washingmachine.jpg" alt="Rafting Sjoa Washing Machine">
       <div class="text">Rafting Sjoa</div>
     </div>
     <div class="mySlides fade">
       <div class="numbertext">2 / 5</div>
-        <img src="imagenes/slide-familyrafting.jpg" alt="Family Rafting Sjoa" style="width:100%">
+        <img src="imagenes/slide-familyrafting.jpg" alt="Family Rafting Sjoa">
       <div class="text">Family Rafting</div>
     </div>
     <div class="mySlides fade">
       <div class="numbertext">3 / 5</div>
-        <img src="imagenes/slide-flipinsjoa.jpg" alt="Ultimate Rafting in Sjoa" style="width:100%">
+        <img src="imagenes/slide-flipinsjoa.jpg" alt="Ultimate Rafting in Sjoa">
       <div class="text">Ultimate Rafting</div>
     </div>
     <div class="mySlides fade">
       <div class="numbertext">4 / 5</div>
-      <img src="imagenes/slide-raftingaseng.jpg" alt="Rafting Åseng" style="width: 100%">
+      <img src="imagenes/slide-raftingaseng.jpg" alt="Rafting Åseng">
       <div class="text">Rafting Åseng</div>
     </div>
     <div class="mySlides fade">
       <div class="numbertext">5 / 5</div>
-        <img src="imagenes/slide-happyfaces.jpg" alt="Happy Rafting" style="width:100%">
+        <img src="imagenes/slide-happyfaces.jpg" alt="Happy Rafting">
       <div class="text">Rafting in Sjoa</div>
     </div>
     <!-- prev-next -->
@@ -66,7 +66,7 @@
   </div>
   <!-- dots -->
     <br>
-  <div style="text-align:center">
+  <div class="dot-container">
     <span class="dot" onclick="currentSlide(1)"></span> 
     <span class="dot" onclick="currentSlide(2)"></span> 
     <span class="dot" onclick="currentSlide(3)"></span>
@@ -266,12 +266,12 @@
           <h2>Connect</h2>
       </div>
       <div class="col-12 social-icon">
-          <a href="https://www.facebook.com/Sjoaescape"><i class="fab fa-facebook"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="https://www.instagram.com/sjoaescape"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-tiktok"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-      </div>
+        <a href="https://www.facebook.com/Sjoaescape" aria-label="Link to Sjoa Escape Facebook page"><i class="fab fa-facebook"></i></a>
+        <a href="#" aria-label="Link to Sjoa Escape Twitter page"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.instagram.com/sjoaescape" aria-label="Link to Sjoa Escape Instragram page"><i class="fab fa-instagram"></i></a>
+        <a href="#" aria-label="Link to Sjoa Escape Tik Tok page"><i class="fab fa-tiktok"></i></a>
+        <a href="#" aria-label="Link to Sjoa Escape Youtube channel"><i class="fab fa-youtube"></i></a>
+    </div>
   </div>
 </div>
 <br class="br-footer">
