fixing aria-label rafting-sjoa page & add h1 in index page

--- a/rafting-sjoa.html
+++ b/rafting-sjoa.html
@@ -28,7 +28,7 @@
         <li><a href="contact.html">Contact</a></li>
     </ul>
     <div class="accebility">
-      <a href="#" class="language"><i class="fa fa-language"></i></a>
+      <a href="#" class="language" aria-label="Activate the accessibility mode of the web page"><i class="fa fa-language"></i></a>
     </div>
   </nav>
 
@@ -158,12 +158,12 @@
           <h2>Connect</h2>
       </div>
       <div class="col-12 social-icon">
-          <a href="https://www.facebook.com/Sjoaescape"><i class="fab fa-facebook"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="https://www.instagram.com/sjoaescape"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-tiktok"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-      </div>
+        <a href="https://www.facebook.com/Sjoaescape" aria-label="Link to Sjoa Escape Facebook page"><i class="fab fa-facebook"></i></a>
+        <a href="#" aria-label="Link to Sjoa Escape Twitter page"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.instagram.com/sjoaescape" aria-label="Link to Sjoa Escape Instragram page"><i class="fab fa-instagram"></i></a>
+        <a href="#" aria-label="Link to Sjoa Escape Tik Tok page"><i class="fab fa-tiktok"></i></a>
+        <a href="#" aria-label="Link to Sjoa Escape Youtube channel"><i class="fab fa-youtube"></i></a>
+    </div>
   </div>
 </div>
 <br class="br-footer">
