--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav class="navbar">
     <!-- LOGO -->
     <a href="index.html"><img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
-    <div class="logo">Sjoa Escape</div>
+    <h1 class="logo">Sjoa Escape</h1>
     <!-- NAVIGATION MENU -->
     <ul class="nav-links menu">
       <!-- NAVIGATION MENUS -->
