--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
         <li><a href="contact.html" class="active">Contact</a></li>
     </ul>
     <div class="accebility">
-      <a href="#" class="language"><i class="fa fa-language"></i></a>
+      <a href="#" class="language" aria-label="Activate the accessibility mode of the web page"><i class="fa fa-language"></i></a>
     </div>
 </nav>
 
@@ -52,14 +52,14 @@
                         <label for="tel">Phone:</label><br>
                         <input type="text" id="tel" value="234 234"><br>
                         <label for="msj">Message:</label><br>
-                        <textarea name="message" style="width:100%; height:300px;">Leave your message here.</textarea>
+                        <textarea name="message" aria-label="Box to write a message with questions or comments to Sjoa Escape">Leave your message here.</textarea>
                         <input type="submit" value="Enviar" class="enviar"> 
                     </fieldset>
                 </form>
             </div>    
             <div class="lateral-contact">
                 <div class="map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1622.2443330259614!2d9.425116403794856!3d61.71026563299891!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1ses-419!2sse!4v1669558892033!5m2!1ses-419!2sse" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1622.2443330259614!2d9.425116403794856!3d61.71026563299891!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1ses-419!2sse!4v1669558892033!5m2!1ses-419!2sse" title="Map-SjoaEscape" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             <div class="img-contact">
                 <h4>Rafting Expedition</h4>
@@ -75,11 +75,11 @@
                 <h2>Connect</h2>
             </div>
             <div class="col-12 social-icon">
-                <a href="https://www.facebook.com/Sjoaescape"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.instagram.com/sjoaescape"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-tiktok"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
+                <a href="https://www.facebook.com/Sjoaescape" aria-label="Link to Sjoa Escape Facebook page"><i class="fab fa-facebook"></i></a>
+                <a href="#" aria-label="Link to Sjoa Escape Twitter page"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.instagram.com/sjoaescape" aria-label="Link to Sjoa Escape Instragram page"><i class="fab fa-instagram"></i></a>
+                <a href="#" aria-label="Link to Sjoa Escape Tik Tok page"><i class="fab fa-tiktok"></i></a>
+                <a href="#" aria-label="Link to Sjoa Escape Youtube channel"><i class="fab fa-youtube"></i></a>
             </div>
         </div>
     </div>
