moving rating-sjoa & fixing aria-label/h1 rafting-sjoa page

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <img src="imagenes/banner-sjoarafting.jpg" alt="Rafting in Sjoa" width="100%">
     </div>
     <div class="ban-activity">
-      <h3><a href="activities/sjoa-classic.html">Rating in Sjoa</a></h3>
+      <h3><a href="sjoa-classic.html">Rating in Sjoa</a></h3>
     </div><hr class="hr-index">
     <div class="ban-description">
       <p>This is the classic tour on Sjoa river.<br>
@@ -94,7 +94,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="activities/sjoa-classic.html">Read more</a></li>
+        <li><a href="sjoa-classic.html">Read more</a></li>
         <li>Half day</li>
         <li><b>950 NOK</b></li>
       </ul>
