--- a/rafting-sjoa.html
+++ b/rafting-sjoa.html
@@ -15,7 +15,7 @@
   <nav class="navbar">
     <!-- LOGO -->
     <a href="index.html"><img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
-    <div class="logo">Sjoa Escape</div>
+    <h1 class="logo">Sjoa Escape</h1>
      <!-- USING CHECKBOX HACK -->
      <input type="checkbox" id="checkbox_toggle" />
      <label for="checkbox_toggle" class="hamburger">&#9776;</label>
@@ -35,7 +35,7 @@
 <!-- INTRO RAFTING IN SJOA -->
 <section>
   <div class="raft-title">
-    <h1>Rafting in Sjoa</h1>
+    <h2>Rafting in Sjoa</h2>
   </div>
   <articule class="raft-intro">
     <img src="imagenes/Sjoa-WashingMachine.jpg" alt="Rafting Sjoa Washing Machine rapid">
@@ -65,7 +65,7 @@
       <img src="imagenes/banner-sjoarafting.jpg" alt="Rafting in Sjoa" width="100%">
     </div>
     <div class="ban-activity">
-      <h3><a href="activities/sjoa-classic.html">Sjoa Classic</a></h3>
+      <h3><a href="sjoa-classic.html">Sjoa Classic</a></h3>
     </div>
     <hr class="hr-index">
     <div class="ban-description">
@@ -76,7 +76,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="activities/sjoa-classic.html">Book Now!</a></li>
+        <li><a href="sjoa-classic.html">Book Now!</a></li>
         <li>Half day</li>
         <li><b>950 NOK</b></li>
       </ul>
